--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -14,6 +14,9 @@ jobs:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+          FTP: ${{ secrets.FTP }}
+          DEVHOOK: ${{ secrets.DEVHOOK }}
+          USERHOOK: ${{ secrets.USERHOOK }}
         run: |
           # Init
           LANG=en_US.UTF-8
@@ -35,16 +38,19 @@ jobs:
           VERSION=`grep -a1 '<!-- BEGIN-LATEST-JP -->' ../ChangeLog | tail -n1 | cut -d ' ' -f 3`
 
           # Install brew dependencies.
+          echo "Installing the brew packages."
           brew install mingw-w64 emscripten makensis
+
+          # Build game.exe
           echo ""
           echo "Building game.exe"
           cd engine-windows
           curl -O https://polaris-engine.com/dl/libroot-windows.tar.gz
           tar xzf libroot-windows.tar.gz
           make -j8
-          cp game.exe game-signed.exe
-          echo 'sign.sh game-signed.exe'
           cd ..
+
+          # Build Game.app (game-mac.dmg)
           echo ""
           echo "Building Game.app (game-mac.dmg)."
           cd engine-macos
@@ -54,38 +60,48 @@ jobs:
           cp game-mac.dmg
           codesign --sign 'Developer ID Application: Keiichi TABATA' game-mac.dmg
           cd ..
+
+          # Build Wasm files.
           echo ""
           echo "Building Wasm files."
           cd engine-wasm
           make
           cd ..
+
+          # Make an iOS source tree.
           echo ""
           echo "Building iOS source tree."
           cd engine-ios
           make src > /dev/null
           cd ..
+
+          # Make an Android source tree.
           echo ""
           echo "Building Android source tree."
           cd engine-android
           make src > /dev/null
           cd ..
+
+          # Build polaris-engine.exe
           echo ""
           echo "Building polaris-engine.exe"
           cd pro-windows
-          cp -Rav ../engine-windows/libroot .
-          make -j16 VERSION="$VERSION"
-          echo 'sign.sh polaris-engine.exe'
+          mv ../engine-windows/libroot .
+          make -j8 VERSION="$VERSION"
           cd ..
+
+          # Build web-test.exe
           echo ""
           echo "Building web-test.exe"
           cd ../tools/web-test
           make
           cd ../../build
+
+          # Build polaris-engine-installer.exe
           echo ""
           echo "Creating an installer for Windows."
           cp -v pro-windows/polaris-engine.exe installer-windows/polaris-engine.exe
           rm -rf installer-windows/games
-          find ../games -name '.DS_Store' | xargs rm
           mkdir installer-windows/games
           cp -R ../games/japanese-light installer-windows/games/
           cp -R ../games/japanese-dark installer-windows/games/
@@ -96,7 +112,6 @@ jobs:
           rm -rf installer-windows/tools
           mkdir -p installer-windows/tools
           cp engine-windows/game.exe installer-windows/tools/
-          cp engine-windows/game-signed.exe installer-windows/tools/
           cp engine-macos/game-mac.dmg installer-windows/tools/
           cp -R engine-android/android-src installer-windows/tools/android-src
           cp -R engine-ios/ios-src installer-windows/tools/ios-src
@@ -109,29 +124,38 @@ jobs:
           cd installer-windows
           make
           cd ..
+
+          # Build Polaris Engine.app (polaris-engine.dmg)
           echo ""
           echo "Building Polaris Engine.app (polaris-engine.dmg)"
           cd pro-macos
           make
           cd ..
+
+          # Upload the exe and dmg to the Web server.
           echo ""
           echo "Uploading files."
           curl -T installer-windows/polaris-engine-installer.exe -u ${{ secrets.ftp }} ftp://ftp.lolipop.jp/sites/polaris-engine.com/polaris-engine-installer-$VERSION.exe
           curl -T pro-macos/polaris-engine.dmg -u ${{ secrets.ftp }} ftp://ftp.lolipop.jp/sites/polaris-engine.com/polaris-engine-installer-$VERSION.dmg
           echo "Upload completed."
+          cd ..
+
+          # Update the Web site.
           echo ""
           echo "Updating the Web site."
-          cd ../web
+          cd web
           curl -o dl/index.html https://polaris-engine.com/dl/index.html
           curl -o en/dl/index.html https://polaris-engine.com/en/dl/index.html
           ./update-templates.sh
           ./update-version.sh
-          curl -T dl/index.html -u ${{ secrets.ftp }} ftp://ftp.lolipop.jp/sites/polaris-engine.com/dl/index.html
-          curl -T en/dl/index.html -u ${{ secrets.ftp }} ftp://ftp.lolipop.jp/sites/polaris-engine.com/en/dl/index.html
+          curl -T dl/index.html -u $FTP ftp://ftp.lolipop.jp/sites/polaris-engine.com/dl/index.html
+          curl -T en/dl/index.html -u $FTP ftp://ftp.lolipop.jp/sites/polaris-engine.com/en/dl/index.html
           cd ..
-          cd ..
+
+          # Post to Discord.
+          cd build
           echo ""
-          echo "Post to the Discord servers."
+          echo "Post to Discord."
           NOTE_JP=`cat ChangeLog | awk '/BEGIN-LATEST-JP/,/END-LATEST-JP/' | tail -n +2 | sed '$d'`
           NOTE_JP=`echo "$NOTE_JP" | sed -e 's/<li>Polaris Engine/## Polaris Engine/g'`
           NOTE_JP=`echo "$NOTE_JP" | sed -e 's/    <li>/* /g'`
@@ -143,5 +167,5 @@ jobs:
           NOTE_JP=`printf "$NOTE_JP\n\nダウンロードはこちら: https://polaris-engine.com/dl/"`
           NOTE_JP=`echo "$NOTE_JP" | sed -z 's/\n/\\\\n/g'`
           echo $NOTE_JP
-          curl -H 'Content-Type: application/json' -X 'POST' -d "{\"username\": \"リリース\", \"content\": \"$NOTE_JP\"}" ${{ secrets.devhook }}
-          curl -H 'Content-Type: application/json' -X 'POST' -d "{\"username\": \"リリース\", \"content\": \"$NOTE_JP\"}" ${{ secrets.userhook }}
+          curl -H 'Content-Type: application/json' -X 'POST' -d "{\"username\": \"リリース\", \"content\": \"$NOTE_JP\"}" $DEVHOOK
+          curl -H 'Content-Type: application/json' -X 'POST' -d "{\"username\": \"リリース\", \"content\": \"$NOTE_JP\"}" $USERHOOK
