--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -124,11 +124,11 @@ jobs:
           curl -O https://polaris-engine.com/dl/libroot-macos.tar.gz
           tar xzf libroot-macos.tar.gz
           echo 'Debug: Building...'
-          xcodebuild -quiet -scheme pro-macos -project pro-macos.xcodeproj -configuration Release -archivePath `pwd`/build/Release/pro-macos.xcarchive OTHER_CODE_SIGN_FLAGS="--keychain=$KEYCHAIN_PATH" CODE_SIGN_IDENTITY='8791B1BF3393E633CC3AC91E80F381994ABCF073' archive
+          xcodebuild -quiet -scheme pro-macos -project pro-macos.xcodeproj -configuration Release -archivePath `pwd`/build/Release/pro-macos.xcarchive OTHER_CODE_SIGN_FLAGS="--keychain=$KEYCHAIN_PATH" CODE_SIGN_IDENTITY='8791B1BF3393E633CC3AC91E80F381994ABCF073' -allowProvisioningUpdates archive
           echo 'Debug: Exporting...'
           xcodebuild -quiet -exportArchive -archivePath `pwd`/build/Release/pro-macos.xcarchive -exportOptionsPlist export-options.plist OTHER_CODE_SIGN_FLAGS="--keychain=$KEYCHAIN_PATH" CODE_SIGN_IDENTITY='8791B1BF3393E633CC3AC91E80F381994ABCF073' -allowProvisioningUpdates `pwd`/build/Release/pro-macos.xcarchive
           echo 'Debug: Nortalizing...'
-          until xcodebuild -quiet -exportNotarizedApp -archivePath `pwd`/build/Release/pro-macos.xcarchive -exportPath `pwd`/build/Release ${XCODEBUILD_FLAGS} > /dev/null 2>&1; do echo "Waiting 10 seconds for notarization..."; sleep 10; done
+          until xcodebuild -quiet -exportNotarizedApp -archivePath `pwd`/build/Release/pro-macos.xcarchive -exportPath `pwd`/build/Release OTHER_CODE_SIGN_FLAGS="--keychain=$KEYCHAIN_PATH" CODE_SIGN_IDENTITY='8791B1BF3393E633CC3AC91E80F381994ABCF073' -allowProvisioningUpdates > /dev/null 2>&1; do echo "Waiting 10 seconds for notarization..."; sleep 10; done
           echo "Successfully notarized."
           mkdir tmp
           cp -Ra "build/Release/Polaris Engine.app" "tmp/Polaris Engine.app"
