--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,16 @@ build/installer-windows/polaris-engine.exe
 #
 tools/vscode-extension/*.vsix
 
+#
+# Games
+#
+
+games/japanese-light/txt/orbis.txt
+games/japanese-dark/txt/orbis.txt
+games/japanese-tategaki/txt/orbis.txt
+
+#
 # Misc.
+#
 build/engine-unity
 build/engine-windows-private-*
