--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,7 @@ build/engine-unity/Assets/*.meta
 build/engine-unity/StreamingAssets
 build/engine-unity/Assets/*.dll
 build/engine-unity/Assets/*.dylib
+build/engine-unity/unity-src
 
 #
 # Editor
